@@ -1,3 +1,7 @@
+2011-04-20 Ingo Renner  <ingo@typo3.org>
+
+	* Added support for curl HTTP transport
+
 2011-04-19 Ingo Renner  <ingo@typo3.org>
 
 	* Fixed missing XCLASS in tx_tika_StatusCheck
